[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "lotr-sdk"
version = "0.1.0"
description = "Python SDK for The One API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Balaji" }
]
dependencies = [
  "requests>=2.31.0",
  "urllib3<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "requests-mock>=1.11.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/lotr_sdk"]
